--- a/finalProject.html
+++ b/finalProject.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mayank</title>
+	<link rel="stylesheet" type="text/css" href="css/finalProjectCss.css">
 </head>
 <body>
 <h1>Mayank Srivastava</h1>
