--- a/finalProject.html
+++ b/finalProject.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/finalProjectCss.css">
 </head>
 <body>
+<header>
 <h1>Mayank Srivastava</h1>
 <nav>
 	<a href="#">One</a>
@@ -13,6 +14,7 @@
 	<a href="#">Three</a>
 	<a href="#">Me</a>
 </nav>
+</header>
 <section class="Favorite Foods">
 <h2>Favorite Foods</h2>
 <ul>
@@ -32,7 +34,7 @@
 </section>
 <section class="More About Me">
 	<h2>More About Me</h2>
-	<details>
+	<details open>
 		<summary>My Childhood</summary>
 		<p>I grew in Rajasthan India. It's basically a desert.
 	</details>
